[package]
name = "bluedroid-testbench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.66" }
async-trait = { version = "0.1.59" }
btleplug = { version = "0.10.4" }
clap = { version = "4.0.27", features = ["derive"] }
futures = { version = "0.3.25" }
log = { version = "0.4.17" }
pretty_env_logger = { version = "0.4.0" }
tokio = { version = "1.24.2", features = ["full"] }
uuid = { version = "1.2.2" } 
